...
        return;
      }

      if (nextStatus == LoginSubmitStatus.success) {
        await showSuccessAlertDialogWidget(
          context,
          title: 'Login berhasil',
          actionButtonTitle: 'Lanjut',
        );

        if (!context.mounted) return;

        final profileNotifier = ref.read(profileControllerProvider.notifier);
...
                      },
                    ),
                    Gap.h40,
                    loginState.status == LoginSubmitStatus.loading
                        ? const CircularProgressIndicator()
                        : ButtonWidget.primary(
                            text: 'Login',
                            textColor: BaseColor.white,
                            color: BaseColor.primaryInspire,
                            focusColor: BaseColor.primaryInspire,
                            overlayColor: BaseColor.primaryInspire,
                            onTap: _handleLogin,
                          ),
...
